--- a/AngryFisher/index.html
+++ b/AngryFisher/index.html
@@ -68,6 +68,7 @@
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/UserModel.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/FishVo.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/PathPoint.js"></script>
+	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/RoomInfoVo.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/event/BaseEvent.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/event/GameDispatcher.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/GameMain.js"></script>
@@ -78,6 +79,7 @@
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/loading/LoadingUI.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/renderer/FishRenderer.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/renderer/PlayerGunRenderer.js"></script>
+	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/renderer/RoomInfoListRenderer.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/renderer/ShellRenderer.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/window/Alert.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/window/HelpPanel.js"></script>
