--- a/AngryFisher/index.html
+++ b/AngryFisher/index.html
@@ -81,6 +81,7 @@
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/renderer/PlayerGunRenderer.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/renderer/RoomInfoListRenderer.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/renderer/ShellRenderer.js"></script>
+	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/top/TopView.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/window/Alert.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/window/HelpPanel.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/window/IWindow.js"></script>
