--- a/AngryFisher/index.html
+++ b/AngryFisher/index.html
@@ -77,6 +77,7 @@
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/hall/HallView.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/hall/RoomInfoListPanel.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/loading/LoadingUI.js"></script>
+	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/login/LoginView.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/renderer/FishRenderer.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/renderer/PlayerGunRenderer.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/renderer/RoomInfoListRenderer.js"></script>
