海底和配置

--- a/AngryFisher/index.html
+++ b/AngryFisher/index.html
@@ -66,12 +66,14 @@
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/def/StateDef.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/LanguageConfig.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/UserModel.js"></script>
+	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/DeabedVo.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/FishVo.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/PathPoint.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/RoomInfoVo.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/event/BaseEvent.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/event/GameDispatcher.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/GameMain.js"></script>
+	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/game/DeabedPanel.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/game/GameWorld.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/window/BaseComponent.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/hall/HallView.js"></script>
