鱼的死亡动画

--- a/AngryFisher/index.html
+++ b/AngryFisher/index.html
@@ -75,6 +75,7 @@
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/GameMain.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/game/DeabedPanel.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/game/GameWorld.js"></script>
+	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/game/HitGoldAnimation.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/window/BaseComponent.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/hall/HallView.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/hall/RoomInfoListPanel.js"></script>
