--- a/AngryFisher/index.html
+++ b/AngryFisher/index.html
@@ -53,6 +53,7 @@
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/base/ai/messaging/MessageDispatcher.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/base/ai/messaging/MessageType.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/base/ai/messaging/Telegram.js"></script>
+	<script egret="game" src="bin-debug/com/ourgame/angryFisher/base/ai/utils/FishPathUtil.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/base/ai/utils/TreeSet.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/base/ai/v2d/Vector2Ds.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/base/interface/IBase.js"></script>
