create fish config

--- a/AngryFisher/index.html
+++ b/AngryFisher/index.html
@@ -68,6 +68,7 @@
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/LanguageConfig.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/UserModel.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/DeabedVo.js"></script>
+	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/FishCreateVo.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/FishVo.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/PathPoint.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/RoomInfoVo.js"></script>
