--- a/AngryFisher/index.html
+++ b/AngryFisher/index.html
@@ -102,6 +102,8 @@
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/net/handler/SocketIoHandler.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/net/handler/WebSocketHandler.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/net/ISocket.js"></script>
+	<script egret="game" src="bin-debug/com/ourgame/angryFisher/net/message/BaseMessage.js"></script>
+	<script egret="game" src="bin-debug/com/ourgame/angryFisher/net/message/MsgLoginReq.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/net/MsgReceiveHelper.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/net/MsgSendHelper.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/net/MsgType.js"></script>
