各种面板，玩家数据

--- a/AngryFisher/index.html
+++ b/AngryFisher/index.html
@@ -71,6 +71,7 @@
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/FishCreateVo.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/FishVo.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/PathPoint.js"></script>
+	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/PlayerVo.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/RoomInfoVo.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/event/BaseEvent.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/event/GameDispatcher.js"></script>
@@ -91,6 +92,8 @@
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/window/Alert.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/window/HelpPanel.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/window/IWindow.js"></script>
+	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/window/MailPanel.js"></script>
+	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/window/OperationPanel.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/window/WindowManager.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/native/AndroidInterface.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/native/INative.js"></script>
