--- a/AngryFisher/index.html
+++ b/AngryFisher/index.html
@@ -30,6 +30,7 @@
 	<script egret="lib" src="libs/modules/game/game.web.js" src-release="libs/modules/game/game.web.min.js"></script>
 	<script egret="lib" src="libs/modules/tween/tween.js" src-release="libs/modules/tween/tween.min.js"></script>
 	<script egret="lib" src="libs/modules/socket/socket.js" src-release="libs/modules/socket/socket.min.js"></script>
+	<script egret="lib" src="libs/modules/dragonBones/dragonBones.js" src-release="libs/modules/dragonBones/dragonBones.min.js"></script>
 	<!--modules_files_end-->
 
     <!--这个标签为不通过egret提供的第三方库的方式使用的 javascript 文件，请将这些文件放在libs下，但不要放在modules下面。-->
@@ -68,8 +69,10 @@
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/LanguageConfig.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/UserModel.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/DeabedVo.js"></script>
+	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/DiceVo.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/FishCreateVo.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/FishVo.js"></script>
+	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/GridVo.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/PathPoint.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/PlayerVo.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/RoomInfoVo.js"></script>
