鱼的资源，大厅房间按钮，步步为营地图滚动

--- a/AngryFisher/index.html
+++ b/AngryFisher/index.html
@@ -91,6 +91,7 @@
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/login/LoginView.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/renderer/FishRenderer.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/renderer/PlayerGunRenderer.js"></script>
+	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/renderer/RoomBtnItemRenderer.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/renderer/RoomInfoListRenderer.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/renderer/ShellRenderer.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/top/TopView.js"></script>
@@ -101,6 +102,7 @@
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/window/IWindow.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/window/MailPanel.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/window/OperationPanel.js"></script>
+	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/window/RankPanel.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/model/window/WindowManager.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/native/AndroidInterface.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/native/INative.js"></script>
@@ -138,7 +140,7 @@
 
     <div style="margin: auto;width: 100%;height: 100%;" class="egret-player"
          data-entry-class="Main"
-         data-orientation="auto"
+         data-orientation="landscape"
          data-scale-mode="showAll"
          data-frame-rate="30"
          data-content-width="950"
