--- a/AngryFisher/index.html
+++ b/AngryFisher/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Egret</title>
+    <title>愤怒的渔夫-HTML5</title>
     <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="full-screen" content="true"/>
@@ -78,6 +78,7 @@
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/PathPointVo.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/PlayerVo.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/RoomInfoVo.js"></script>
+	<script egret="game" src="bin-debug/com/ourgame/angryFisher/data/vo/ShellVo.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/event/BaseEvent.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/event/GameDispatcher.js"></script>
 	<script egret="game" src="bin-debug/com/ourgame/angryFisher/event/GameEvent.js"></script>
@@ -150,8 +151,8 @@
          data-orientation="landscape"
          data-scale-mode="showAll"
          data-frame-rate="30"
-         data-content-width="950"
-         data-content-height="650"
+         data-content-width="960"
+         data-content-height="570"
          data-show-paint-rect="false"
          data-multi-fingered="2"
          data-show-fps="false" data-show-log="false"
